<resources>
    <string name="app_name">ExpressInternal</string>
    <string name="login_quote">We are committed in providing highest standard services,\nreliable and on-time delivery.</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_error_incomplete_fields">Missing username/password</string>
    <string name="login_get_started">GET STARTED</string>
    <string name="login_yilinker_express">YILINKER EXPRESS</string>
    <string name="login_partner">"P   A   R   T   N   E   R"</string>
    <string name="login_username_mobile">Username / Mobile</string>
    <string name="login_button_2">Log In</string>
    <string name="logging_in">"Logging In..."</string>
    <string name="login_dont_have_account_yet">"Don't have an account yet?"</string>
    <string name="login_signup">Sign Up here</string>
    <string name="login_confirm_password">Confirm Password</string>
    <string name="login_complete_sign_up">Complete Sign Up</string>
    <string name="login_completing_sign_up">"Completing Sign Up..."</string>
    <string name="login_error_mobile_required">Invalid Mobile Number</string>
    <string name="terms_and_condition_label">By Signing Up you have accepted</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="terms_and_conditions_ours">"ours "</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="login_signing_up">Signing up..</string>
    <string name="registration_already_have_an_account">Already have an account? Sign in</string>
    <string name="registration_here">" here"</string>
    <string name="registration_password_required">Password is required.</string>
    <string name="registration_coonfirm_password_not_match">Password does not match.</string>
    <string name="registration_password_less_than_min">Password must be at least 8 characters</string>
    <string name="registration_sit_back_and_relax">Sit back and relax while we verify</string>
    <string name="registration_sit_back_and_relax_2">your mobile number</string>
    <string name="registration_verification_code_sent">VERIFICATION CODE HAS BEEN SENT TO</string>
    <string name="registration_enter_code">Enter Code</string>
    <string name="registration_resend_verification">Resend Verification Code</string>
    <string name="registration_mobile_number_start">+63</string>
    <string name="registration_verify">Verify</string>
    <string name="registration_verifying">"Verifying..."</string>
    <string name="registration_create_account">Create Account</string>
    <string name="registration_sending_verification_code">Sending Verification Code...</string>
    <string name="registration_error_code_required">Verification Code is required.</string>
    <string name="yilinker_express_rider">YILINKER EXPRESS RIDER</string>
    <string name="menu_mapview">Map View</string>
    <string name="menu_listview">List View</string>
    <string name="menu_current_job">View All Current Jobs</string>
    <string name="menu_pickup">View For Pickup</string>
    <string name="menu_delivery">View For Delivery</string>
    <string name="menu_dropoff">View For Dropoff</string>
    <string name="menu_scanner">QR Code Scanner</string>
    <string name="menu_acknowledge">Direct Acknowledge</string>
    <string name="drawer_dashboard">Dashboard</string>
    <string name="drawer_profile">Profile</string>
    <string name="drawer_map">Map</string>
    <string name="drawer_logout">Logout</string>
    <string name="drawer_cash_management">Cash Management</string>
    <string name="drawer_sync">Sync</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="prof_delivery">Delivery</string>
    <string name="prof_pickup">Pick Up</string>
    <string name="prof_completed">Completed</string>
    <string name="prof_earnings">Earnings</string>
    <string name="prof_job_orders">Job Orders</string>
    <string name="prof_pickups">Pick Ups</string>
    <string name="prof_deliveries">Deliveries</string>
    <string name="prof_today">Today</string>
    <string name="prof_total">Completed</string>
    <string name="prof_onhand">On Hand</string>
    <string name="prof_dropff">Drop Off</string>
    <string name="alert_accept">Accept</string>
    <string name="alert_new_job_offer">New Job Offer Available</string>
    <string name="alert_from">From</string>
    <string name="alert_to">To</string>
    <string name="alert_type">Type</string>
    <string name="alert_item">Item</string>
    <string name="alert_view_details">View Details</string>
    <string name="job_order">Job Order</string>
    <string name="joblist_claiming">For Claiming</string>
    <string name="joblist_completed">Completed</string>
    <string name="joblist_problematic">Problematic</string>
    <string name="filter_area">Area</string>
    <string name="filter_branch">Branch</string>
    <string name="job_order_waybill_number">Waybill Number</string>
    <string name="job_order_number">Job Order Number</string>
    <string name="eta">ETA</string>
    <string name="pickup_address">Pickup Address</string>
    <string name="dropoff_address">Dropoff Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="claiming_address">Claiming Address</string>
    <string name="drop_to">Drop to</string>
    <string name="deliver_to">Deliver to</string>
    <string name="claim_at">Claim At</string>
    <string name="recipient">Recipient</string>
    <string name="shipper_name">Shipper Name</string>
    <string name="consignee">Consignee</string>
    <string name="consignee_name">Consignee Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="item">Item</string>
    <string name="type">Type</string>
    <string name="rating">Rating</string>
    <string name="time_used">Time Used</string>
    <string name="time_elapsed">Time Elapsed</string>
    <string name="earned">Earned</string>
    <string name="status">Status</string>
    <string name="amount_collected">Amount Collected</string>
    <string name="distance_from_me">Distance From Me</string>
    <string name="joborderdetail_open_accept">Accept Job</string>
    <string name="joborderdetail_open_decline">Decline</string>
    <string name="joborderdetail_pickup">Pickup</string>
    <string name="joborderdetail_outofstock">Out of Stock</string>
    <string name="joborderdetail_deliver">Deliver</string>
    <string name="joborderdetail_problematic">Problematic</string>
    <string name="joborderdetail_claim">Claim</string>
    <string name="joborderdetail_csrname">Reported By</string>
    <string name="joborderdetail_type">Type</string>
    <string name="joborderdetail_remarks">Remarks</string>
    <string name="joborderdetail_error_no_image">No image available</string>
    <string name="joborderdetail_report_out_of_stock">Report this as out of stock?</string>
    <string name="joborderdetail_job_order_accepted">Job order accepted!</string>
    <string name="joborderdetail_job_order_successfully_problem_reporting">Successfully reported the problem!</string>
    <string name="joborderdetail_date_created">Date Created</string>
    <string name="joborderdetail_date_accepted">Date Accepted</string>
    <string name="joborderdetail_amount_to_collect">Amount to collect</string>
    <string name="cancel">Cancel</string>
    <string name="gps_network_not_enabled">You need to turn on location services to use this feature.</string>
    <string name="open_location_settings">Go to Settings</string>
    <string name="generating_qr">Generating QR Code...</string>
    <string name="open_joborderdetail_accept">Accept</string>
    <string name="request_claim_successful_message">Job order has been claimed successfully.</string>
    <string name="joborderdetail_outdated">Job is outdated. Click here to sync.</string>
    <string name="job_order_list_open">Open</string>
    <string name="job_order_list_current">Current</string>
    <string name="job_order_list_completed">Completed</string>
    <string name="job_order_list_problematic">Problematic</string>
    <string name="joborder_list_no_results_found">No results found</string>
    <string name="joborder_list_search_job_order">Search Job Order</string>
    <string name="joborder_list_delivery">delivery</string>
    <string name="joborder_list_eta">ETA</string>
    <string name="joborder_list_more">more</string>
    <string name="update_pickup_completed">Pick Up Completed!</string>
    <string name="update_select_new_status">Please select new status</string>
    <string name="update_for_delivery">For Delivery</string>
    <string name="update_for_dropoff">For Drop Off</string>
    <string name="signature_good_condition">I received goods in good condition</string>
    <string name="signature_submit">Submit</string>
    <string name="signature_rating">Add Rating</string>
    <string name="signature_rate_delivery">How will you rate this delivery?</string>
    <string name="signature_error_no_rating">Please add your rating!</string>
    <string name="signature_error_empty">Please sign on the screen to continue!</string>
    <string name="signature_warning">You did not submit your signature!</string>
    <string name="signature_exit">Exit Anyway</string>
    <string name="signature_rating_added">Rating Added</string>
    <string name="signature_clear_signature">Clear Signature</string>
    <string name="scan_qr"></string>
    <string name="single_scanner">Single Scanning</string>
    <string name="bulk_scanner">Bulk Check-in</string>
    <string name="scanner_job_order_accepted">Job accepted!</string>
    <string name="problematic_recipient_not_found">Recipient Not Found</string>
    <string name="problematic_delivery_rejected">Delivery rejected by recipient</string>
    <string name="problematic_damaged_upon_delivery">Damaged Upon Delivery</string>
    <string name="problematic_unable_to_pay">Recipient is unable to pay</string>
    <string name="problematic_out_of_stock">Out of Stock</string>
    <string name="confirm_problematic">Confirm Problematic Delivery</string>
    <string name="problematic_remarks_hint">Remarks</string>
    <string name="problematic_notes">"Item(s) out of stock"</string>
    <string name="problematic_attach_photo">Attach photo</string>
    <string name="confirm_problematic_2">Confirm Problematic</string>
    <string name="confirm_problematic_submitting">Confirming...</string>
    <string name="report_as_problematic">REPORT AS PROBLEMATIC</string>
    <string name="ok">Ok</string>
    <string name="cashmanagement_onhand">Cash on hand</string>
    <string name="cashmanagement_limit">Cash on hand limit</string>
    <string name="logout_username">Username</string>
    <string name="logout_password">Password</string>
    <string name="logout_confirm">Confirm</string>
    <string name="logout_managers_verification">Manager\'s verification\nis required to continue</string>
    <string name="logout">Logging Out</string>
    <string name="cashlimit_oops">Oops!</string>
    <string name="cashlimit_message">You are about to exceed your\nCash On Hand Limit</string>
    <string name="cashlimit_verification">Manager\'s Verification\nis required to continue</string>
    <string name="cashlimit_username">Username</string>
    <string name="cashlimit_password">Password</string>
    <string name="cashlimit_submit">Submit</string>
    <string name="view_images"><u>View Images</u></string>
    <string name="accreditation_basic_information">Basic Information</string>
    <string name="accreditation_firstname">First Name</string>
    <string name="accreditation_lastname">Last Name</string>
    <string name="accreditation_birthday">Birthday</string>
    <string name="accreditation_gender">Gender</string>
</resources>