<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_rounded_white_no_padding"
    android:paddingBottom="10dp">

<TextView
    style="@style/AccreditationHeaderTitleStyle"
    android:text="@string/accreditation_basic_information"/>

<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/gray5"/>

<EditText
    android:id="@+id/etFirstName"
    style="@style/AccreditationEditTextStyle"
    android:hint="@string/accreditation_firstname"/>

<EditText
    android:id="@+id/etLastName"
    style="@style/AccreditationEditTextStyle"
    android:hint="@string/accreditation_lastname"/>

<Button
    android:id="@+id/etBithday"
    style="@style/AccreditationEditTextStyle"
    android:hint="@string/accreditation_birthday"
    android:focusableInTouchMode="true"
    android:gravity="left|center_vertical"
    android:textColor="@color/gray6"/>

<EditText
    android:id="@+id/etGender"
    style="@style/AccreditationEditTextStyle"
    android:hint="@string/accreditation_gender"/>

</LinearLayout>