<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <TextView
        style="@style/JobOrderDetailLabelStyle" android:text="@string/dropoff_address"/>
    <TextView style="@style/JobOrderDetailTextStyle" android:text="JO123345667" />

    <TextView
        style="@style/JobOrderDetailLabelStyle" android:text="@string/recipient"/>
    <TextView style="@style/JobOrderDetailTextStyle" android:text="JO123345667" />

    <TextView
        style="@style/JobOrderDetailLabelStyle" android:text="@string/contact_number"/>
    <TextView style="@style/JobOrderDetailTextStyle" android:text="JO123345667" />

    <TextView
        style="@style/JobOrderDetailLabelStyle" android:text="@string/item"/>
    <TextView style="@style/JobOrderDetailTextStyle" android:text="JO123345667" />

</merge>
