<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        style="@style/JobOrderDetailLabelStyle" android:text="@string/joborderdetail_csrname"/>
    <TextView android:id="@+id/tvCSRName" style="@style/JobOrderDetailTextStyle" android:text="-" />

    <TextView
        style="@style/JobOrderDetailLabelStyle" android:text="@string/joborderdetail_type"/>
    <TextView android:id="@+id/tvProblemType" style="@style/JobOrderDetailTextStyle" android:text="-" />


    <TextView
        style="@style/JobOrderDetailLabelStyle" android:text="@string/joborderdetail_remarks"/>
    <TextView android:id="@+id/tvRemarks" style="@style/JobOrderDetailTextStyle" android:text="-" />

    <TextView android:id="@+id/tvViewImages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:textSize="16sp" android:text="@string/view_images" android:textColor="@drawable/selector_textcolor_orangered" android:clickable="true" />

</merge>