<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/JobOrderItemContainerStyle"
    android:gravity="center_horizontal">

    <TextView
        style="@style/AlertHeaderTextViewStyle"
        android:text="@string/alert_new_job_offer"/>

    <TextView
        style="@style/AlertSubHeaderTextViewStyle"
        android:text="@string/alert_area"/>

    <TextView
        style="@style/AlertValueTextViewStyle"
        android:text="Malate Manila, Metro Manila"/>

    <TextView
        style="@style/AlertSubHeaderTextViewStyle"
        android:text="@string/alert_type"/>

    <TextView
        style="@style/AlertValueTextViewStyle"
        android:text="PICK UP"/>

    <TextView
        style="@style/AlertSubHeaderTextViewStyle"
        android:text="@string/alert_item"/>

    <TextView
        style="@style/AlertValueTextViewStyle"
        android:text="iPhone 5S Gray 64 GB"/>

</LinearLayout>